--- a/conway-cubes.html
+++ b/conway-cubes.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Solving Advent of Code 2020 day 17 by not solving it - death and gravity</title>
+<title>untitled - death and gravity</title>
 
 
 <script>
@@ -53,7 +53,7 @@ window.addEventListener('resize', set_vh);
 </ul>
 </nav>
 
-<h1>Solving Advent of Code 2020 day 17 by not solving it</h1>
+<h1>untitled</h1>
 
 </header>
 
